	  version" warning.  when I added this warning, I had a plan to
	  reimplement the parser that is simpler than the current one.
	  since we abandoned the plan, warning no longer required.

Mon Nov  5 01:02:56 2007  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (HTTPHeader#initialize): provide default
	  User-Agent to fix 500 error on some corrupted HTTP servers.
	  [ruby-core:13135]

Mon Nov  5 00:24:24 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub: vendor_ruby support.

	* configure.in (RUBY_LIB): duplicated.

Mon Nov  5 00:01:33 2007  Tanaka Akira  <akr@fsij.org>

	* re.c (rb_reg_quote): quote \v as well.

Sun Nov  4 23:51:59 2007  Tanaka Akira  <akr@fsij.org>

	* re.c (rb_reg_initialize_m): use StringValuePtr instead of
	  StringValueCStr because \0 exists when Regexp.new("\0").

Sun Nov  4 08:11:19 2007  Tanaka Akira  <akr@fsij.org>

	* gc.c (count_objects): count TOTAL.

Sun Nov  4 03:58:32 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (tr_setup_table): use C array for characters that fit
	  in a byte to gain performance.

	* string.c (rb_str_delete_bang): ditto.

	* string.c (rb_str_squeeze_bang): ditto.

	* string.c (rb_str_count): ditto.

	* string.c (tr_trans): ditto.

Sun Nov  4 00:06:40 2007  Tanaka Akira  <akr@fsij.org>

	* gc.c (count_objects): ObjectSpace.count_objects implemented.
	  [ruby-core:12301]

Sat Nov  3 22:49:37 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_each_pair): make Hash#each to be alias to
	  Hash#each_pair for compatibility and clarity.

	* hash.c (env_each_pair): ditto.

Sat Nov  3 22:41:05 2007  Tanaka Akira  <akr@fsij.org>

	* configure.in: --with-vendor-hdrdir implemented.

	* lib/mkmf.rb: check --vendor argument.

	* README.EXT: explain --vendor option for extconf.rb

	* README.EXT.ja: ditto.

Sat Nov  3 20:30:48 2007  Tanaka Akira  <akr@fsij.org>

	* configure.in: --with-vendordir implemented.

	* mkconfig.rb: add config to vendorlibdir and vendorarchdir.
