@@ -1553,7 +1553,7 @@ module DRb
 	  end
 	  ary.collect(&@obj)[0]
 	else
-	  @obj.send!(@msg_id, *@argv)
+	  @obj.send(@msg_id, *@argv)
 	end
       end
 
