@@ -1229,7 +1229,7 @@ module Net
 
     class RawData # :nodoc:
       def send_data(imap)
-        imap.send!(:put_string, @data)
+        imap.send(:put_string, @data)
       end
 
       private
@@ -1241,7 +1241,7 @@ module Net
 
     class Atom # :nodoc:
       def send_data(imap)
-        imap.send!(:put_string, @data)
+        imap.send(:put_string, @data)
       end
 
       private
@@ -1253,7 +1253,7 @@ module Net
 
     class QuotedString # :nodoc:
       def send_data(imap)
-        imap.send!(:send_quoted_string, @data)
+        imap.send(:send_quoted_string, @data)
       end
 
       private
@@ -1265,7 +1265,7 @@ module Net
 
     class Literal # :nodoc:
       def send_data(imap)
-        imap.send!(:send_literal, @data)
+        imap.send(:send_literal, @data)
       end
 
       private
@@ -1277,7 +1277,7 @@ module Net
 
     class MessageSet # :nodoc:
       def send_data(imap)
-        imap.send!(:put_string, format_internal(@data))
+        imap.send(:put_string, format_internal(@data))
       end
 
       private
